--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>GTA Fuck Franklin I</title>
 </head>
-<body>
-    <input type="text" class="textbox" placeholder="enter your password">
-    <input type="text" class="userbox" placeholder="enter your username">
-    <button class="button">enter</button>
-    <button class="riddle">click to see how to solve password</button>
-    <script src="./realapp.js"></script>
+
+<body style="background-color: blueviolet;">
+    <p>right click -> open audio in new tab for full exprerience(recomended)</p>
+    <audio controls loop>
+        <source src="GTA San Andreas Theme Song Remix.mp3" 
+        type="audio/mpeg">
+    </audio>
+    <h1 class="intro">GTA Fuck Franklin I</h1>
+    <h2 class="ins">Press start to proceed</h2>
+    <button class="start">start</button>
+    <button class="dont">dont start(you must be stupid to press this)</button>
+    <script src="./gtaApp.js"></script>
 </body>
 </html>
