--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body style="background-color: blueviolet;">
+    <h2>background Image</h2>
     <p>right click -> open audio in new tab for full exprerience(recomended)</p>
     <audio controls loop>
         <source src="GTA San Andreas Theme Song Remix.mp3" 
@@ -18,6 +19,8 @@
     <h2 class="ins">Press start to proceed</h2>
     <button class="start">start</button>
     <button class="dont">dont start(you must be stupid to press this)</button>
+    <p class="pay">In order to play the full game pay 10 cents</p>
+    <button class="payment">Pay</button>
     <script src="./gtaApp.js"></script>
 </body>
 </html>
