Work in progress

--- a/Aboutme.html
+++ b/Aboutme.html
@@ -93,7 +93,7 @@
     <header>
         <nav>
             <ul>
-                <li id="HomeTab"><a href="Home.html" class="HomeTab">Home</a></li>
+                <li id="HomeTab"><a href="index.html" class="HomeTab">Home</a></li>
                 <li id="AboutTab"><a href="Aboutme.html" class="AboutTab">About</a></li>
                 <li id="DonateTab"><a href="Feedback.html" class="DonateTab">Feedback!</a></li>
             </ul>
