--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <input type="text" placeholder="Enter Username" id="user">
     <input type="text" placeholder="Enter Password" id="pass">
-    <button id="btn" onclick="signup()"><a href="/Intro.html">sign up</a></button>
+    <button id="btn" onclick="signup()"><a href="Intro.html">sign up</a></button>
     <script src="/BeforeIntro.js"></script>
 </body>
 </html>
