--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <input type="text" placeholder="Enter Username" id="user">
     <input type="text" placeholder="Enter Password" id="pass">
     <button id="btn" onclick="signup()"><a href="Intro.html">sign up</a></button>
+    <button><a href="Intro.html">Already have an account</a></button>
     <script src="/BeforeIntro.js"></script>
 </body>
 </html>
